outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval7730403209497058274_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance decreases, and flow disruption penalties grow as the search progresses. The core logic iteratively evaluates nodes based on these weighted scores to select the next step in the TSP path.}
                                                                                                                                                                                                         ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance decreases, and flow disruption penalties grow as the search progresses. The core logic iteratively evaluates nodes based on these weighted scores to select the next step in the TSP path.}
                                                                                                                                                                                                         ^
SyntaxError: unmatched '}'
